--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-native-screens": "3.31.1",
     "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.10",
-    "svix": "^1.25.0"
+    "svix": "^1.25.0",
+    "expo-navigation-bar": "~3.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
